# data-pipeline

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.devcontainer/config/: config.fish  pgadmin.json
docs/: TUTORIAL.md  userful_commands.md
scripts/: nats_setup.sh  postgres_setup.sql
