[project]
name = "data-pipeline"
version = "0.1.0"
description = "Template project to design a resilient data pipeline with NATS message broker and python background workers."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.ruff]
line-length = 100

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
